<resources>
    <string name="app_name">MarvelStudios</string>
    <string name="forget_password">Esqueceu a senha?</string>
    <string name="sign_in">Entrar</string>
    <string name="recover_password">Recuperar Senha</string>
    <string name="sign_in_google">Entrar com Google</string>
    <string name="create_new_account">Criar nova conta</string>
    <string name="email">Email</string>
    <string name="logomarvel">logoMarvel</string>
    <string name="password">Senha</string>
    <string name="preencha_os_campos_abaixo_para_cadastrar">Preencha os campos abaixo para cadastrar:</string>
    <string name="cancel">Cancelar</string>
    <string name="sign_up">Cadastrar</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="logomarvelstudio2">logoMarvelStudio2</string>
    <string name="logodisney">logoDisney</string>
    <string name="simple_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="titutlo">TextView</string>
    <string name="avengers_image">avengers image</string>
    <string name="defaulte">default</string>
    <string name="imagempadrao">default</string>
    <string name="error_account_already_exists">"com.google.firebase.auth.FirebaseAuthUserCollisionException: The email address is already in use by another account."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="efeito_gradiente">efeito_gradiente</string>
    <string name="share">Share</string>
    <string name="icone_wpp">icone_wpp</string>
    <string name="share_via">Share via:</string>
</resources>