<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E40B14"
    tools:context=".activitys.LoginActivity">


    <ImageView
        android:id="@+id/logoMarvel"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logomarvel"
        app:srcCompat="@drawable/marvel_logo_psd_444569" />

    <EditText
        android:id="@+id/email"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_below="@+id/logoMarvel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layerType="none"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layerType="none"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:id="@+id/botaoSignIn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:focusable="true" />

    <Button
        android:id="@+id/botaoSignInGoogle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:layout_below="@+id/botaoSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:background="@drawable/rounded_button_white"
        android:text="@string/sign_in_google"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botaoSignInGoogle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="@string/forget_password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:text="@string/create_new_account"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:focusable="true" />

</RelativeLayout>