<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.SplashActivity"
    android:background="#E40B14">

    <ImageView
        android:id="@+id/logoMarvel"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logomarvelstudio2"
        app:srcCompat="@drawable/marvel_logo_fist" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoMarvel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/logomarvel"
        app:srcCompat="@drawable/marvel_logo_psd_444569" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/logodisney"
        app:srcCompat="@drawable/marvel_logo_all" />

</RelativeLayout>