<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E40B14"
    tools:context=".activitys.ForgetPasswordActivity"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <ImageView
        android:id="@+id/logoMarvel"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/logomarvel"
        app:srcCompat="@drawable/marvel_logo_psd_444569" />

    <EditText
        android:id="@+id/emailRecoverPassword"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_below="@+id/logoMarvel"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <Button
        android:id="@+id/buttonRecoverPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/emailRecoverPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:text="@string/recover_password"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:focusable="true" />

    <Button
        android:id="@+id/buttonCancelRecoverPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonRecoverPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        />
</RelativeLayout>