<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E40B14"
    tools:context=".activitys.RegisterActivity">

    <Button
        android:id="@+id/botaoCancel"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoSignUp" />

    <Button
        android:id="@+id/botaoSignUp"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmarSenha" />

    <EditText
        android:id="@+id/registerConfirmarSenha"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textEmailAddress"
        android:layerType="none"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSenha" />

    <EditText
        android:id="@+id/registerSenha"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:layerType="none"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <ImageView
        android:id="@+id/logoMarvel"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logomarvel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/marvel_logo_psd_444569" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layerType="none"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMarvel" />

</androidx.constraintlayout.widget.ConstraintLayout>