<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E40B14"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/marvel_logo_psd_444569" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layerType="none"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editTextEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:layerType="none"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/forget_password"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:clickable="true"
        android:text="@string/create_new_account"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</RelativeLayout>